--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -248,6 +248,30 @@
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
             tools:itemCount="6"
-            tools:listitem="@layout/item_home_elec" />
+            tools:listitem="@layout/item_home_elec"
+            tools:visibility="visible" />
+
+        <LinearLayout
+            android:id="@+id/lin_empty_game"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="256dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_slot_empty" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-20dp"
+                android:textSize="15sp"
+                android:textColor="@color/color_A7B2C4"
+                android:text="@string/dont_have_game" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
