--- a/app/src/main/res/layout/item_hot_handicap.xml
+++ b/app/src/main/res/layout/item_hot_handicap.xml
@@ -81,6 +81,7 @@
             <TextView
                 android:id="@+id/tv_title2"
                 android:layout_marginEnd="@dimen/margin_10"
+                android:visibility="gone"
                 android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="1"
