--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -26,31 +26,24 @@
             tools:itemCount="6"
             tools:listitem="@layout/item_tab_home" />
 
-        <androidx.core.widget.NestedScrollView
+        <androidx.legacy.widget.Space
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
+        <ImageView
+            android:id="@+id/iv_elec_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginVertical="5dp"
+            android:src="@drawable/ic_elec_title" />
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <androidx.legacy.widget.Space
-                    android:layout_width="match_parent"
-                    android:layout_height="14dp"
-                    />
-                <ImageView
-                    android:id="@+id/iv_elec_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="5dp"
-                    android:src="@drawable/ic_elec_title" />
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="2dp"
-                    android:gravity="bottom">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="2dp"
+            android:gravity="bottom">
 
             <FrameLayout
                 android:layout_width="0dp"
@@ -95,14 +88,14 @@
                         android:layout_marginTop="5dp"
                         android:background="@drawable/bg_white_radius_10"
                         android:fontFamily="@font/din_bold"
-                    android:gravity="center"
-                    android:includeFontPadding="false"
-                    android:paddingHorizontal="10dp"
-                    tools:text="P123.343"
-                    android:textColor="@color/color_F73C6C"
-                    android:textSize="13sp" />
-            </LinearLayout>
-        </FrameLayout>
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:paddingHorizontal="10dp"
+                        tools:text="P123.343"
+                        android:textColor="@color/color_F73C6C"
+                        android:textSize="13sp" />
+                </LinearLayout>
+            </FrameLayout>
 
             <FrameLayout
                 android:layout_width="0dp"
@@ -148,14 +141,14 @@
                         android:paddingHorizontal="10dp"
                         android:layout_marginTop="5dp"
                         android:includeFontPadding="false"
-                    android:gravity="center"
-                    android:background="@drawable/bg_white_radius_10"
-                    tools:text="P123.343"
-                    android:textSize="13sp"
-                    android:textColor="@color/color_F1A932"
-                    android:fontFamily="@font/din_bold" />
-            </LinearLayout>
-        </FrameLayout>
+                        android:gravity="center"
+                        android:background="@drawable/bg_white_radius_10"
+                        tools:text="P123.343"
+                        android:textSize="13sp"
+                        android:textColor="@color/color_F1A932"
+                        android:fontFamily="@font/din_bold" />
+                </LinearLayout>
+            </FrameLayout>
 
             <FrameLayout
                 android:layout_width="0dp"
@@ -206,8 +199,8 @@
                         android:textColor="@color/color_0789F5"
                         android:textSize="13sp"
                         tools:text="P123.343" />
-            </LinearLayout>
-        </FrameLayout>
+                </LinearLayout>
+            </FrameLayout>
         </LinearLayout>
     </LinearLayout>
     <View
@@ -281,6 +274,4 @@
                 android:text="@string/dont_have_game" />
         </LinearLayout>
     </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
-</LinearLayout>
 </LinearLayout>
