--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,33 +8,32 @@
     android:background="@color/background"
     android:orientation="vertical">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/bg_egame">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <include
-            android:id="@+id/lin_toolbar"
-            layout="@layout/view_toolbar_home" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_tab_home"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginHorizontal="@dimen/margin_15"
-            tools:itemCount="6"
-            tools:listitem="@layout/item_tab_home" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <androidx.legacy.widget.Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="bottom"
+                android:background="@drawable/bg_egame">
 
-        <ImageView
-            android:id="@+id/iv_elec_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+                <androidx.legacy.widget.Space
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:id="@+id/iv_elec_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginVertical="5dp"
             android:src="@drawable/ic_elec_title" />
@@ -202,7 +201,7 @@
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
-    </LinearLayout>
+            </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_12"
@@ -274,4 +273,24 @@
                 android:text="@string/dont_have_game" />
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/lin_toolbar"
+            layout="@layout/view_toolbar_home" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_tab_home"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="@dimen/margin_15"
+            tools:itemCount="6"
+            tools:listitem="@layout/item_tab_home" />
+    </LinearLayout>
+</FrameLayout>
