--- a/app/src/main/res/layout/hot_live_match_include.xml
+++ b/app/src/main/res/layout/hot_live_match_include.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_5"
-            android:text="@string/find_all"
+            android:text="@string/see_more"
             android:textColor="@color/color_025BE8"
             android:textSize="@dimen/textSize12sp" />
 
