--- a/app/src/main/res/layout/tab_item_home_open.xml
+++ b/app/src/main/res/layout/tab_item_home_open.xml
@@ -10,7 +10,7 @@
         android:id="@+id/include_layout0"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="@dimen/dp_4"
+        android:layout_marginHorizontal="2dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_selector"
         android:gravity="center"
@@ -27,6 +27,7 @@
             android:textSize="@dimen/textSize12sp"
             android:textColor="@color/color_E9F4FA"
             android:textStyle="bold"
+            android:layout_marginBottom="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text = "推荐"/>
@@ -35,7 +36,7 @@
         android:id="@+id/include_layout1"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="@dimen/dp_4"
+        android:layout_marginHorizontal="2dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -48,7 +49,7 @@
             android:gravity="center"
             android:text="@string/home_live"
             android:textSize="@dimen/textSize10sp"
-
+            android:layout_marginBottom="3dp"
             android:textColor="@color/color_535D76"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -57,7 +58,7 @@
         android:id="@+id/include_layout2"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="@dimen/dp_4"
+        android:layout_marginHorizontal="2dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -70,6 +71,7 @@
             android:gravity="center"
             android:text="@string/home_sports"
             android:textSize="@dimen/textSize10sp"
+            android:layout_marginBottom="3dp"
             android:textColor="@color/color_535D76"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,7 +81,7 @@
         android:id="@+id/include_layout3"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="@dimen/dp_4"
+        android:layout_marginHorizontal="2dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -91,6 +93,7 @@
         <TextView
             android:gravity="center"
             android:textSize="@dimen/textSize10sp"
+            android:layout_marginBottom="3dp"
             android:textColor="@color/color_535D76"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -123,7 +126,7 @@
         android:id="@+id/include_layout5"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="@dimen/dp_4"
+        android:layout_marginHorizontal="2dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -136,6 +139,7 @@
             android:gravity="center"
             android:text="@string/home_slot"
             android:textSize="@dimen/textSize10sp"
+            android:layout_marginBottom="3dp"
             android:textColor="@color/color_535D76"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -144,7 +148,7 @@
         android:id="@+id/include_layout6"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="@dimen/dp_4"
+        android:layout_marginHorizontal="2dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -157,6 +161,7 @@
             android:gravity="center"
             android:text="@string/home_on_game"
             android:textSize="@dimen/textSize10sp"
+            android:layout_marginBottom="3dp"
             android:maxLines="2"
             android:textColor="@color/color_535D76"
             android:layout_width="match_parent"
