--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -342,6 +342,7 @@
     <color name="transparent_black_0">#00000000</color>
     <color name="transparent_black_1">#03000000</color>
     <color name="transparent_black_8">#14000000</color>
+    <color name="transparent_black_20">#32000000</color>
     <color name="transparent_black_33">#52000000</color>
     <color name="transparent_black_40">#66000000</color>
     <color name="transparent_black_50">#80000000</color>
