--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -12,18 +12,25 @@
         android:orientation="vertical"
         android:background="@color/color_131932_F0F5FA">
 
-        <ImageView
-            android:layout_width="100dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="50dp"
-            android:src="@drawable/logo_okbet_color"
-            android:adjustViewBounds="true" />
+            android:background="@drawable/bg_sport_left_top">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="50dp"
+                android:src="@drawable/logo_okbet_color"
+                android:adjustViewBounds="true" />
+        </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-50dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -149,7 +156,7 @@
                         android:fontFamily="@font/din_bold"
                         tools:text="122"
                         android:textFontWeight="400"
-                        android:textColor="@color/color_025BE8_025BE8"
+                        android:textColor="@color/selector_blue_white"
                         android:textSize="@dimen/textSize14sp" />
 
                     <androidx.legacy.widget.Space
@@ -204,7 +211,7 @@
                         android:layout_marginLeft="@dimen/margin_4"
                         android:fontFamily="@font/din_bold"
                         tools:text="122"
-                        android:textColor="@color/color_025BE8_025BE8"
+                        android:textColor="@color/selector_blue_white"
                         android:textSize="@dimen/textSize14sp" />
 
                     <androidx.legacy.widget.Space
