--- a/app/src/main/res/layout/fragment_sport_left.xml
+++ b/app/src/main/res/layout/fragment_sport_left.xml
@@ -15,23 +15,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="35dp">
+            android:orientation="vertical"
+            android:background="@drawable/bg_sport_left_top">
 
-            <ImageView
-                android:layout_width="100dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/logo_okbet_color"
-                android:adjustViewBounds="true" />
+                android:gravity="center_vertical"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="35dp">
 
-            <androidx.legacy.widget.Space
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/logo_okbet_color"
+                    android:adjustViewBounds="true" />
 
-            <ImageView
+                <androidx.legacy.widget.Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <ImageView
                 android:id="@+id/iv_search"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -84,7 +90,7 @@
                 android:textSize="@dimen/textSize14sp"
                 android:text="@string/home_in_play" />
         </RadioGroup>
-
+        </LinearLayout>
         <LinearLayout
             android:id="@+id/lin_sport"
             android:layout_width="match_parent"
@@ -215,7 +221,7 @@
                         android:layout_marginLeft="@dimen/margin_4"
                         android:fontFamily="@font/din_bold"
                         tools:text="122"
-                        android:textColor="@color/color_025BE8_025BE8"
+                        android:textColor="@color/selector_blue_white"
                         android:textSize="@dimen/textSize14sp" />
 
                     <androidx.legacy.widget.Space
