--- a/app/src/main/res/layout/item_sport_inplay.xml
+++ b/app/src/main/res/layout/item_sport_inplay.xml
@@ -12,6 +12,7 @@
         android:paddingHorizontal="20dp">
 
         <ImageView
+            android:id="@+id/iv_sport_logo"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/ic_menu_sport" />
@@ -32,7 +33,7 @@
             android:layout_marginLeft="@dimen/margin_4"
             android:fontFamily="@font/din_bold"
             android:text="123"
-            android:textColor="@color/color_025BE8_025BE8"
+            android:textColor="@color/selector_blue_white"
             android:textSize="@dimen/textSize14sp" />
 
         <androidx.legacy.widget.Space
