--- a/app/src/main/res/layout/item_play_spinner_new.xml
+++ b/app/src/main/res/layout/item_play_spinner_new.xml
@@ -29,6 +29,8 @@
             android:gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textStyle="bold"
             android:textColor="@color/color_FFFFFF"
             android:textSize="12sp"
