--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -82,6 +82,7 @@
     <color name="color_FFF7F7">#FFF7F7</color>
     <color name="color_9FADC6">#9FADC6</color>
     <color name="color_E9F4FA">#E9F4FA</color>
+    <color name="color_30E23434">#4BE23434</color>
 
     <color name="color_F5F5F5">#F5F5F5</color>
     <color name="color_7F7F7F">#7F7F7F</color>
