--- a/app/src/main/res/drawable/bg_radius_4_button_7c7c7c.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_7c7c7c.xml
@@ -2,8 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/color_FF9143" />
-    <solid android:color="#FFDCA8" />
+    <solid android:color="#7C7C7C" />
 </shape>
