优化直播间动画

--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -64,6 +64,16 @@
                 android:textColor="@color/color_F1A027"
                 android:text="@string/collse_live" />
 
+            <!--            <org.cxct.sportlottery.widget.RippleDiffuseRound-->
+            <!--                android:id="@+id/ripple_enter"-->
+            <!--                android:layout_width="60dp"-->
+            <!--                android:layout_height="@dimen/margin_26"-->
+            <!--                android:layout_centerVertical="true"-->
+            <!--                app:rd_scale="1.3"-->
+            <!--                app:btn_img_res="@drawable/ic_person_avatar"-->
+            <!--                app:ripple_img_res="@drawable/bg_ripple">-->
+            <!--            </org.cxct.sportlottery.widget.RippleDiffuseRound>-->
+
             <TextView
                 android:id="@+id/tv_enter_live"
                 android:layout_width="wrap_content"
@@ -71,6 +81,7 @@
                 android:layout_gravity="center"
                 android:paddingHorizontal="@dimen/dp_10"
                 android:gravity="center"
+                android:visibility="visible"
                 android:background="@drawable/bg_red_radius_15"
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize12sp"
@@ -85,16 +96,26 @@
             android:paddingHorizontal="10dp"
             android:paddingVertical="5dp">
 
+            <org.cxct.sportlottery.widget.RippleDiffuse
+                android:id="@+id/ripple_view"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                app:rd_scale="1.3"
+                app:btn_img_res="@drawable/icon_avatar"
+                app:ripple_img_res="@drawable/bg_ripple"></org.cxct.sportlottery.widget.RippleDiffuse>
+
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/iv_anchor_avatar"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_centerVertical="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_person_avatar"
+                android:src="@drawable/icon_avatar"
                 app:riv_border_color="@color/color_FFFFFF"
                 app:riv_border_width="@dimen/margin_1"
-                app:riv_oval="true" />
+                app:riv_oval="true"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_anchor_name"
