--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -312,4 +312,15 @@
         <attr name="hi_bgColor" format="color" />
         <attr name="hi_indicatorColor" format="color" />
     </declare-styleable>
+    <declare-styleable name="RippleDiffuse">
+        <attr name="rd_scale" format="float" />
+        <attr name="btn_img_res" format="reference" />
+        <attr name="ripple_img_res" format="reference" />
+    </declare-styleable>
+    <declare-styleable name="CircleImageView">
+        <attr name="civ_border_width" format="dimension" />
+        <attr name="civ_border_color" format="color" />
+        <attr name="civ_border_overlay" format="boolean" />
+        <attr name="civ_fill_color" format="color" />
+    </declare-styleable>
 </resources>
