直播列表代码冲突

--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -85,31 +85,26 @@
             android:paddingHorizontal="10dp"
             android:paddingVertical="5dp">
 
-            <FrameLayout
-                android:layout_width="@dimen/margin_36"
-                android:layout_height="@dimen/margin_36"
-                android:layout_centerVertical="true">
+            <org.cxct.sportlottery.widget.RippleDiffuse
+                android:id="@+id/ripple_view"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                app:rd_scale="1.3"
+                app:btn_img_res="@drawable/icon_avatar"
+                app:ripple_img_res="@drawable/bg_ripple"></org.cxct.sportlottery.widget.RippleDiffuse>
 
-<!--                <View-->
-<!--                    android:id="@+id/vavatarBg"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:background="@drawable/bg_circle_red_alpha30"/>-->
-
-                <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/iv_anchor_avatar"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_centerVertical="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_person_avatar"
-                    android:visibility="gone"
-                    app:riv_border_color="@color/color_E23434"
-                    app:riv_border_width="@dimen/margin_2"
-                    app:riv_oval="true" />
-
-            </FrameLayout>
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/iv_anchor_avatar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/icon_avatar"
+                app:riv_border_color="@color/color_FFFFFF"
+                app:riv_border_width="@dimen/margin_1"
+                app:riv_oval="true"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_anchor_name"
