--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -64,6 +64,18 @@
                 android:textColor="@color/color_F1A027"
                 android:text="@string/collse_live" />
 
+            <org.cxct.sportlottery.widget.RippleDiffuse
+                android:id="@+id/ripple_enter"
+                android:layout_width="100dp"
+                android:layout_height="26dp"
+                android:layout_gravity="center"
+                android:layout_centerVertical="true"
+                app:btn_img_res="@drawable/icon_avatar"
+                app:rd_scale="1.3"
+                app:ripple_img_res="@drawable/bg_ripple">
+
+            </org.cxct.sportlottery.widget.RippleDiffuse>
+
             <TextView
                 android:id="@+id/tv_enter_live"
                 android:layout_width="wrap_content"
@@ -71,10 +83,12 @@
                 android:layout_gravity="center"
                 android:paddingHorizontal="@dimen/dp_10"
                 android:gravity="center"
+                android:visibility="gone"
                 android:background="@drawable/bg_red_radius_15"
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize12sp"
                 android:text="@string/enter_live" />
+
         </FrameLayout>
 
         <LinearLayout
