赛事详情自动播放视频

--- a/app/src/main/res/layout/item_home_slot.xml
+++ b/app/src/main/res/layout/item_home_slot.xml
@@ -50,7 +50,7 @@
                 android:textColor="@color/color_6C7BA8"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="E-GAME"
+                android:text="E-GAME"
                 android:visibility="gone" />
 
             <ImageView
