--- a/app/src/main/res/layout/item_home_slot.xml
+++ b/app/src/main/res/layout/item_home_slot.xml
@@ -51,7 +51,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:text="E-GAME"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <ImageView
                 android:id="@+id/iv_repair"
@@ -59,6 +59,7 @@
                 android:layout_height="28dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="13dp"
+                android:visibility="gone"
                 android:src="@drawable/ic_game_repair" />
 
             <View
