--- a/app/src/main/res/layout/view_status_spinner_new.xml
+++ b/app/src/main/res/layout/view_status_spinner_new.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cl_root"
+    android:id="@+id/cl_root_new"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:context=".ui.component.StatusSelectorView"
