--- a/app/src/main/res/layout/view_toolbar_home.xml
+++ b/app/src/main/res/layout/view_toolbar_home.xml
@@ -29,7 +29,7 @@
         android:adjustViewBounds="true"
         android:contentDescription="@null"
         android:scaleType="fitStart"
-        android:src="@drawable/logo_okbet_color" />
+        android:src="@drawable/ic_okbet_logo" />
 
     <include
         android:id="@+id/lin_search"
@@ -76,6 +76,7 @@
         <TextView
             android:id="@+id/btn_register"
             android:layout_width="80dp"
+            android:minWidth="60dp"
             android:layout_height="30dp"
             android:paddingHorizontal="@dimen/dp_10"
             android:singleLine="true"
@@ -91,6 +92,7 @@
         <TextView
             android:id="@+id/btn_login"
             android:layout_width="80dp"
+            android:minWidth="60dp"
             android:layout_height="30dp"
             android:paddingHorizontal="@dimen/dp_10"
             android:singleLine="true"
