--- a/app/src/main/res/layout/item_play_spinner.xml
+++ b/app/src/main/res/layout/item_play_spinner.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_marginStart="13dp"
