--- a/app/src/main/res/layout/tab_item_home_open.xml
+++ b/app/src/main/res/layout/tab_item_home_open.xml
@@ -6,14 +6,17 @@
     android:layout_marginTop="@dimen/margin_8"
     android:layout_marginHorizontal="@dimen/margin_10"
     xmlns:tools="http://schemas.android.com/tools">
+
     <LinearLayout
         android:id="@+id/include_layout0"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="4dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_selector"
         android:gravity="center"
+        android:elevation="8dp"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/iv_tab_icon"
@@ -32,14 +35,16 @@
             android:layout_height="wrap_content"
             tools:text = "推荐"/>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/include_layout1"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="2dp"
+        android:layout_marginRight="4dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
+        android:elevation="8dp"
         android:layout_height="wrap_content">
         <ImageView
             android:src="@drawable/live0"
@@ -58,7 +63,7 @@
         android:id="@+id/include_layout2"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="2dp"
+        android:layout_marginRight="4dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -81,7 +86,7 @@
         android:id="@+id/include_layout3"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="2dp"
+        android:layout_marginRight="4dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -104,7 +109,7 @@
         android:visibility="gone"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="@dimen/dp_4"
+        android:layout_marginRight="4dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -126,7 +131,7 @@
         android:id="@+id/include_layout5"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="2dp"
+        android:layout_marginRight="4dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
@@ -148,7 +153,7 @@
         android:id="@+id/include_layout6"
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="2dp"
+        android:layout_marginRight="2dp"
         android:layout_weight="1"
         android:background="@drawable/bg_tab_open_unselector"
         android:gravity="center"
