--- a/app/src/main/res/layout/hot_gaming_include.xml
+++ b/app/src/main/res/layout/hot_gaming_include.xml
@@ -51,10 +51,11 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
+        android:clipToPadding="false"
+        android:paddingStart="10dp"
         android:id="@+id/rv_egame"
-        android:paddingHorizontal="@dimen/margin_10"
         android:layout_marginTop="@dimen/margin_20"
-        android:paddingBottom="@dimen/margin_30"
+        android:paddingBottom="@dimen/margin_10"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo_handicap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
