--- a/app/src/main/res/layout/view_toolbar_home.xml
+++ b/app/src/main/res/layout/view_toolbar_home.xml
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/btn_register"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:minWidth="60dp"
             android:layout_height="30dp"
             android:paddingHorizontal="@dimen/dp_10"
@@ -91,7 +91,7 @@
 
         <TextView
             android:id="@+id/btn_login"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:minWidth="60dp"
             android:layout_height="30dp"
             android:paddingHorizontal="@dimen/dp_10"
