--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -89,6 +89,7 @@
                         android:gravity="center"
                         android:includeFontPadding="false"
                         android:paddingHorizontal="10dp"
+                        android:layout_marginHorizontal="10dp"
                         tools:text="P123.343"
                         android:textColor="@color/color_F73C6C"
                         android:textSize="13sp" />
@@ -136,7 +137,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:minWidth="60dp"
-                        android:paddingHorizontal="10dp"
+                        android:layout_marginHorizontal="10dp"
                         android:layout_marginTop="5dp"
                         android:includeFontPadding="false"
                         android:gravity="center"
@@ -194,6 +195,7 @@
                         android:includeFontPadding="false"
                         android:minWidth="60dp"
                         android:paddingHorizontal="10dp"
+                        android:layout_marginHorizontal="10dp"
                         android:textColor="@color/color_0789F5"
                         android:textSize="13sp"
                         tools:text="P123.343" />
