首页无用代码删除 取消直播时间显示

--- a/app/src/main/res/layout/hot_live_match_include.xml
+++ b/app/src/main/res/layout/hot_live_match_include.xml
@@ -150,6 +150,7 @@
 
         <TextView
             android:id="@+id/tv_first_half_game"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_10"
@@ -182,6 +183,7 @@
                 tools:text="上半场"/>
             <TextView
                 android:id="@+id/tv_match_time"
+                android:visibility="gone"
                 android:layout_toRightOf="@+id/tvGameStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
