--- a/app/src/main/res/layout/view_status_spinner_new.xml
+++ b/app/src/main/res/layout/view_status_spinner_new.xml
@@ -5,15 +5,17 @@
     android:id="@+id/cl_root_new"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|center_horizontal"
     tools:context=".ui.component.StatusSelectorView"
     tools:background="@drawable/frame_color_silver_light_stroke">
 
     <TextView
         android:id="@+id/tv_name"
-        android:paddingStart="@dimen/margin_6"
+        android:paddingStart="@dimen/margin_5"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:singleLine="true"
         android:textColor="@color/color_79839F_6C7BA8"
         android:textSize="@dimen/textSize12sp"
@@ -24,7 +26,8 @@
         android:id="@+id/iv_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="4dp"
         android:src="@drawable/ic_arrow_gray"
         app:layout_constraintBottom_toBottomOf="@id/tv_name"
         app:layout_constraintStart_toEndOf="@id/tv_name"
