--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -22,6 +22,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:descendantFocusability="blocksDescendants"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
