--- a/app/src/main/res/layout/tab_item_home_open.xml
+++ b/app/src/main/res/layout/tab_item_home_open.xml
@@ -30,6 +30,7 @@
             android:textSize="@dimen/textSize12sp"
             android:textColor="@color/color_E9F4FA"
             android:textStyle="bold"
+            android:layout_marginHorizontal="@dimen/margin_2"
             android:layout_marginBottom="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
