--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -183,18 +183,16 @@
 
             <TextView
                 android:id="@+id/tvLeagueName"
-                android:layout_width="match_parent"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:maxWidth="160dp"
                 android:ellipsize="end"
                 android:gravity="center"
-                android:singleLine="true"
                 android:textColor="@color/color_6C7BA8"
                 android:textSize="12dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:text="Mogolia,1st Leag Mogolia,1st Leag"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Mogolia,1st Leag Mogolia,1st Leag" />
 
             <TextView
                 android:id="@+id/tv_game_play_cate_code_name"
