--- a/app/src/main/res/layout/item_tab_home.xml
+++ b/app/src/main/res/layout/item_tab_home.xml
@@ -5,6 +5,7 @@
     android:gravity="center_vertical"
     android:paddingLeft="10dp"
     android:paddingRight="12dp"
+    android:clipToPadding="false"
     android:layout_margin="@dimen/margin_5"
     android:elevation="2dp"
     android:background="@drawable/selector_tab_home_tabitem">
