--- a/app/src/main/res/layout/fragment_home_worldcup.xml
+++ b/app/src/main/res/layout/fragment_home_worldcup.xml
@@ -20,22 +20,17 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <LinearLayout
+    <include
+        android:id="@+id/lin_toolbar"
+        layout="@layout/view_toolbar_home" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_tab_home"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/background">
-
-        <include
-            android:id="@+id/lin_toolbar"
-            layout="@layout/view_toolbar_home" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_tab_home"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginHorizontal="@dimen/margin_15"
-            tools:itemCount="6"
-            tools:listitem="@layout/item_tab_home" />
-    </LinearLayout>
+        android:layout_height="40dp"
+        android:layout_marginTop="@dimen/tool_bar_height"
+        android:paddingHorizontal="@dimen/margin_15"
+        android:clipToPadding="false"
+        tools:itemCount="6"
+        tools:listitem="@layout/item_tab_home" />
 </FrameLayout>
