--- a/app/src/main/res/layout/item_poker_game.xml
+++ b/app/src/main/res/layout/item_poker_game.xml
@@ -15,8 +15,8 @@
         <ImageView
             android:id="@+id/iv_poker_bg"
             android:scaleType="fitXY"
-            android:layout_width="176dp"
-            android:layout_height="139dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             tools:src="@drawable/ic_poker_item"/>
     </androidx.cardview.widget.CardView>
 
