--- a/app/src/main/res/layout/view_toolbar_detail_collaps.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_collaps.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/iv_toolbar_bg"
@@ -13,16 +13,6 @@
         android:src="@drawable/bg_sport_detail_football" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <View
-            android:id="@+id/view_status_collaps"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_25" />
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/tool_bar_height"
             android:layout_gravity="bottom"
@@ -78,13 +68,13 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
                 android:gravity="center">
 
                 <TextView
                     android:id="@+id/tv_toolbar_match_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_3"
                     android:gravity="center"
                     android:lines="1"
                     android:singleLine="true"
@@ -97,6 +87,7 @@
                     android:id="@+id/tv_toolbar_match_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_3"
                     android:gravity="center"
                     android:lines="1"
                     android:singleLine="true"
@@ -138,7 +129,6 @@
                     android:textSize="@dimen/textSize16sp"
                     tools:text="義大利" />
             </LinearLayout>
-        </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
