--- a/app/src/main/res/layout/fragment_home_worldcup.xml
+++ b/app/src/main/res/layout/fragment_home_worldcup.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/rootView">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -29,7 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/tool_bar_height"
-        android:paddingHorizontal="@dimen/margin_15"
         android:clipToPadding="false"
         tools:itemCount="6"
         tools:listitem="@layout/item_tab_home" />
