--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -22,7 +22,7 @@
             android:visibility="gone"
             tools:visibility="visible">
 
-            <com.pili.pldroid.player.widget.PLVideoView
+            <org.cxct.sportlottery.widget.OKVideoPlayer
                 android:id="@+id/video_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
