1.首页崩溃处理 2.直播Tab边距修改

--- a/app/src/main/res/layout/fragment_home_live.xml
+++ b/app/src/main/res/layout/fragment_home_live.xml
@@ -15,7 +15,8 @@
         android:layout_below="@+id/lin_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_10"
+        android:paddingHorizontal="@dimen/margin_10"
+        android:clipToPadding="false"
         android:orientation="horizontal"
         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="6"
